--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "axios": "^0.24.0",
     "iconv-lite": "^0.6.3",
-    "pinyin-match": "^1.2.2",
-    "solarlunar": "^2.0.7"
+    "pinyin-match": "^1.2.2"
   }
 }
