--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "types": [
+        "utools-api-types"
+    ],
     "baseUrl": ".",
     "paths": {
       "src/*": [
