--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^8.5.0",
     "eslint-webpack-plugin": "^3.1.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "utools-api-types": "^2.6.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
