--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "quasar": "^2.6.0",
+    "raw-loader": "^4.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
