--- a/public/package.json
+++ b/public/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "axios": "^0.24.0",
     "iconv-lite": "^0.6.3",
-    "lodash": "^4.17.21",
-    "pinyin-match": "^1.2.2"
+    "lodash": "^4.17.21"
   }
 }
