--- a/plugin/package.json
+++ b/plugin/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "iconv-lite": "^0.6.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "ses": "^0.15.15"
   }
 }
