--- a/plugin/package.json
+++ b/plugin/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.24.0",
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
-    "ses": "^0.15.15"
+    "ses": "^0.15.15",
+    "tree-kill": "^1.2.2"
   }
 }
