支持设置背景图片，不再局限于面板模式，支持设置毛玻璃效果

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -4,6 +4,7 @@
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
     "ses": "^0.15.15",
+    "sharp": "^0.33.5",
     "tree-kill": "^1.2.2"
   }
 }
