--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "quasar": "^2.7.0",
     "raw-loader": "^4.0.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
