--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,10 +1,10 @@
 {
-  "dependencies": {
-    "axios": "^0.24.0",
-    "iconv-lite": "^0.6.3",
-    "lodash": "^4.17.21",
-    "ses": "^0.15.15",
-    "sharp": "^0.33.5",
-    "tree-kill": "^1.2.2"
-  }
+    "dependencies": {
+        "axios": "^0.24.0",
+        "iconv-lite": "^0.6.3",
+        "jimp": "^0.22.12",
+        "lodash": "^4.17.21",
+        "ses": "^0.15.15",
+        "tree-kill": "^1.2.2"
+    }
 }
