--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,13 +1,14 @@
 {
-    "dependencies": {
-        "axios": "^1.7.9",
-        "crypto-js": "^4.2.0",
-        "exif-reader": "^2.0.1",
-        "iconv-lite": "^0.6.3",
-        "node-forge": "^1.3.1",
-        "png2icons": "^2.0.1",
-        "ses": "^1.10.0",
-        "sm-crypto": "^0.3.13",
-        "tree-kill": "^1.2.2"
-    }
+  "dependencies": {
+    "axios": "^1.7.9",
+    "chrome-remote-interface": "^0.33.2",
+    "crypto-js": "^4.2.0",
+    "exif-reader": "^2.0.1",
+    "iconv-lite": "^0.6.3",
+    "node-forge": "^1.3.1",
+    "png2icons": "^2.0.1",
+    "ses": "^1.10.0",
+    "sm-crypto": "^0.3.13",
+    "tree-kill": "^1.2.2"
+  }
 }
