--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@quasar/extras": "^1.14.0",
     "core-js": "^3.6.5",
     "croner": "^4.3.9",
+    "marked": "^15.0.7",
     "monaco-editor": "^0.33.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "picture-compressor": "^1.1.0",
