--- a/plugin/package.json
+++ b/plugin/package.json
@@ -5,6 +5,7 @@
     "crypto-js": "^4.2.0",
     "exif-reader": "^2.0.1",
     "iconv-lite": "^0.6.3",
+    "marked": "^15.0.7",
     "node-forge": "^1.3.1",
     "png2icons": "^2.0.1",
     "ses": "^1.10.0",
