--- a/plugin/package.json
+++ b/plugin/package.json
@@ -7,6 +7,7 @@
     "iconv-lite": "^0.6.3",
     "marked": "^15.0.7",
     "node-forge": "^1.3.1",
+    "pinyin-match": "^1.2.6",
     "png2icons": "^2.0.1",
     "ses": "^1.10.0",
     "sm-crypto": "^0.3.13",
